# oral-cavity-model-paper

./: LICENSE  README.md  dvc.yaml  pyproject.toml
models/configs/: max_llh.ly.yaml  sampling.ly.yaml  scenarios.ly.yaml  simple.ly.yaml
models/histories/: .gitignore
models/samples/: .gitignore
ocmscripts/: __init__.py  config.py  dataset.py  plot.py  plots.py
ocmscripts/modeling/: predict.py  train.py
reports/: .gitignore  manuscript.qmd
