[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ocmscripts"
version = "0.0.1"
description = "Modelling the tumor progression based on lymphatic spread patterns of newly diagnosed oral cavity squamous cell carcinoma patient records."
authors = [
  { name = "Roman Ludwig" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10"
dependencies = [
    "loguru",
    "python-dotenv",
    "tqdm",
    "typer",
    "dvc",
    "lydata",
    "lymph-model",
    "lyscripts @ git+https://github.com/rmnldwg/lyscripts@d128af28fa8465ac8f82466dac22c5f5d2744416",
]


[tool.ruff]
line-length = 99
src = ["ocmscripts"]
include = ["pyproject.toml", "ocmscripts/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["ocmscripts"]
force-sort-within-sections = true
